--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>WingIt Nairobi</title>
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/deeptailor/image/upload/c_scale,w_250/v1485932674/wingit-logo-transparent_j2t3ni.ico">
     <link href="https://fonts.googleapis.com/css?family=Boogaloo|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="assets/reset.css"/>
     <link rel="stylesheet" href="assets/main.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Gochi+Hand" rel="stylesheet">
     <script src="https://use.fontawesome.com/3b4f7d56e1.js"></script>
   </head>
   <body>
